force-app/main/default/objects/KimbleOne__ApprovalRuleTemplate__c/KimbleOne__ApprovalRuleTemplate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Approval Rule Template</label>
    <nameField>
        <label>Approval RuleTemplate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Rule Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>