force-app/main/default/objects/KimbleOne__ApprovalRuleTemplate__c/fields/KimbleOne__Approver1ActorRole__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Approver1ActorRole__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1 Actor Role</label>
    <referenceTo>KimbleOne__ActorRole__c</referenceTo>
    <relationshipLabel>Approval Rule Templates</relationshipLabel>
    <relationshipName>ApprovalRuleTemplates1</relationshipName>
    <type>Lookup</type>
</CustomField>