force-app/main/default/objects/KimbleOne__ApprovalRuleTemplate__c/fields/KimbleOne__Approver1Type__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Approver1Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver1 Type</label>
    <referenceTo>KimbleOne__ApproverType__c</referenceTo>
    <relationshipLabel>Approval Rule Templates (Approver1 Type)</relationshipLabel>
    <relationshipName>ApprovalRuleTemplatesApprover1</relationshipName>
    <type>Lookup</type>
</CustomField>