force-app/main/default/objects/KimbleOne__ApprovalRuleTemplate__c/fields/KimbleOne__Approver2ActorRole__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Approver2ActorRole__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 2 Actor Role</label>
    <referenceTo>KimbleOne__ActorRole__c</referenceTo>
    <relationshipLabel>Approval Rule Templates (Approver 2 Actor Role)</relationshipLabel>
    <relationshipName>ApprovalRuleTemplates2</relationshipName>
    <type>Lookup</type>
</CustomField>