force-app/main/default/objects/KimbleOne__ApprovalRuleTemplate__c/fields/KimbleOne__ResourcedActivityType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivityType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resourced Activity Type</label>
    <referenceTo>KimbleOne__ResourcedActivityType__c</referenceTo>
    <relationshipLabel>Approval Rule Templates</relationshipLabel>
    <relationshipName>ApprovalRuleTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>