force-app/main/default/objects/KimbleOne__ApprovalRuleTemplate__c/validationRules/KimbleOne__CheckMandatoryProductDomain.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__CheckMandatoryProductDomain</fullName>
    <active>true</active>
    <description>Check that if the Resourced Activity Type is DeliveryElement, the ProductDomain is specifed.</description>
    <errorConditionFormula>KimbleOne__ResourcedActivityType__r.KimbleOne__Enum__c = &apos;DeliveryElement&apos;  &amp;&amp; ISBLANK(KimbleOne__ProductDomain__c)</errorConditionFormula>
    <errorMessage>Product Domain must be specified if the Resourced Activity Type is Delivery Element and not a Supplier Account Default.</errorMessage>
</ValidationRule>